[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "safelearn"
version = "0.1.0"
authors = [
  { name="Asma Zubair" }
]
description = "A Python package for validating machine learning data and pipelines"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "pandas",
  "joblib"
]